# Erpnexttheme2

./: README.md  app.yml  index.html  patches.txt  pyproject.toml
erpnext_theme/: app.json  app.yml  build.json  hooks.py  modules.txt  patches.txt  pyproject.toml
erpnext_theme/_public/js/: erpnext_theme.js  theme.js
erpnext_theme/public/: .placeholder  bundle.js
erpnext_theme/public/css/: theme.css
erpnext_theme/public/js/: theme.bundle.js
erpnext_theme/templates/web/: base.html  index.html
