[build-system]
requires = ["flit_core>=3", "setuptools>=40"]
build-backend = "flit_core.buildapi"

[project]
name = "erpnext_theme"
version = "0.0.1"
description = "Custom ERPNext theme"
readme = "README.md"
authors = [{name = "Saad Eng", email = "saad@engsawy.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[tool.frappe]
app_name = "erpnext_theme"
app_title = "ERPNext Theme"
app_description = "Custom ERPNext theme"
app_icon = "fa-palette"
app_color = "#0891b2"
app_license = "MIT"
app_category = "Theme"